--- a/index.html
+++ b/index.html
@@ -37,20 +37,35 @@
 			<li class="new"><b>NEW</b></li>
 		</ul>
 
+		<form action="" class="box-white container">
+			<label for="location" class="location"> 
+				<b>LOCATION</b>
+				<input type="text" id="location" value="Where are you going?" style=" font-size: 14px; font-weight: 400; color: gray;">
+			</label>
+			<label for="check-in">
+				<b>CHECK IN</b>
+				<input type="datetime-local" id="check-in" style="color: gray;">
+			</label>
+			<label for="check-out">
+				<b>CHECK OUT</b>
+				<input type="datetime-local" id="check-out" style="color: gray;">
+			</label>
+			<label for="guest" class="guest">
+				<div >
+					<span style="color: black; display: block; font-weight: 700;"><b>GUEST</b></span>
+				<span style=" font-size: 14px;">Add guest</span>
 
-		<div class="box-white container">
-			<div class="text-1 larger-text"><b>location</b> <input type="text" placeholder="Where are you going?" style="width: 100%; height: 100%; border: 0px white"></div>
-
-			<div class="text-1"><b>Check in</b><input type="datetime-local" value="Add date" name="Add date" style="height: 100%; width: 100%"></div>
-
-			<div class="text-1"><b>Checkout</b> <br><input type="datetime-local" value="Add date" name="Add date" style="height: 100%; width: 100%"></div>
-
-			<div class="text-1"><b>guest</b><span>Add guest</span></div>
-			<div class="btn">
-				<i class="fas fa-search"></i>
-				<span>Search</span>
-			</div>
-		</div>
+				</div>
+				<div>
+					<button type="button" class="search-btn">
+					<a href="#">
+						<i class="fas fa-search" style="color: white;"></i> 
+						<span style="color: white; margin-left: 0px;">Search</span>
+					</a>
+				</button>
+				</div>
+			</label>
+		</form>
 
 
 		<div class="container content-1">You dont need to go too far to find what matters.</div>
